
ref: tbl_imp_importacion.id < tbl_imp_importacion_detalle.id_importacion

ref: tbl_imp_vendor.id < tbl_imp_importacion.id_vendor
ref: tbl_imp_shipto.id < tbl_imp_importacion.id_shipto
ref: tbl_imp_Product.id < tbl_imp_importacion_detalle.id_product
ref: tbl_imp_vias.id < tbl_imp_importacion.id_via
ref: tbl_imp_estados_pagos.id < tbl_imp_importacion.id_estados_pagos
ref: tbl_imp_tipo_carga.id < tbl_imp_importacion.tipo_carga
ref: tbl_imp_Type_Product.id < tbl_imp_Product.id_type_product
ref: tbl_imp_estado_orden.id < tbl_imp_importacion_detalle.Estado
ref: tbl_imp_estado_orden.id < tbl_imp_importacion.id_estado_orden
ref: tbl_imp_Comentario.id_linea > tbl_imp_importacion_detalle.id

ref: tbl_imp_Mercado.id < tbl_imp_importacion_detalle.id_tipo_mecado

Table tbl_imp_importacion {
  id int(10) [pk, increment] 
  
  num_po varchar(20)
  fecha date
  id_vendor int(10)
  id_shipto int(10) 
  id_via int(10)
  id_estados_pagos int (10)
  
  tipo_carga int (5)
  
  factura varchar(10)
  recibo varchar(10)
  fecha_despacho date
  fecha_orden_compra date
  
  fecha_factura date
  fecha_estimada date
  
  id_estado_orden int(5)
  
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_vias {
  id int(10) [pk, increment] 
  
  Descripcion varchar(250)
  activo varchar(5)
  
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_tipo_carga {
  id int(10) [pk, increment] 
  
  Descripcion varchar(250)
  activo varchar(5)
  
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_estados_pagos {
  id int(10) [pk, increment] 
  
  Descripcion varchar(250)
  activo varchar(5)
  
  created_at timestamp
  updated_at timestamp
}



Table tbl_imp_vendor {
  id int(10) [pk, increment]
  
  nombre_vendor varchar(100)
  Descripcion varchar(250)
  time_despacho int (10)
  time_transito int(10)
  time_aduana int(10)
  
  activo varchar(5)
  
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_shipto {
  id int(10) [pk, increment] 
  
  nombre_shipto varchar(250)
  Descripcion varchar(250)
  activo varchar(5)
  
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_importacion_detalle{
  id int(10) [pk, increment] 
  id_importacion int(10)
  
  id_product int(10)
  linea int (5)
  Estado int (5)
  articulo varchar(10)
  descripcion varchar(250)
  cantidad decimal(10,2)
  
  precio_farmacia decimal(10,2)
  precio_publico decimal(10,2)
  precio_institucion decimal(10,2)
  
  mific varchar(5)
  regencia varchar(5)
  minsa varchar(10)
  TieneVenta int(10)
  id_tipo_mecado int(10)
  
  fecha_real_despacho date
  fecha_real_aduana date
  fecha_real_bodega date
  
  created_at timestamp
  updated_at timestamp
  
}


Table tbl_imp_Product{
  id int(10) [pk, increment]
  id_type_product int (10)
  Clasificacion_1 varchar(20)
  Clasificacion_2 varchar(20)
  Clasificacion_3 varchar(20) 
  Articulo_exactus varchar(50)
  descripcion varchar(250)
  
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}
Table tbl_imp_Type_Product{
  id int(10) [pk, increment] 
  
  descripcion varchar(250)
  
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_estado_orden{
  id int(10) [pk, increment] 
  
  descripcion varchar(250)
  belongs varchar(10)
  
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_Comentario{
  id int(10) [pk, increment] 
  id_linea int(10)
  descripcion varchar(250)
  activo varchar(5)
  id_user int(10)
  created_at timestamp
  updated_at timestamp
}
Table tbl_imp_Mercado{
  id int(10) [pk, increment] 
  descripcion varchar(250)
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}

Table tbl_imp_Clasificacion{
  id int(10) [pk, increment] 
  descripcion varchar(250)
  
  activo varchar(5)
  created_at timestamp
  updated_at timestamp
}

